# ferelix-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCKER-BUILD.md  DOCKER.md  Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-entrypoint.sh  ferelix.code-workspace  ferelix.db-shm  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/actions/setup-deps/: action.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  docker-build.yml  test.yml
.zed/: settings.jsonc
alembic/: env.py  script.py.mako
alembic/versions/: 1765065204_12b9f3eb45ca.py  1765115002_ebe15e7f3dce.py  1765234036_de7e724ff7d9.py  1765282926_add_language_to_user.py  1765284221_20e8100b27e2.py  1765323875_885b2d7dd4b5.py  1765407964_8737db3fef8e.py  1765409565_1fa8c503c08f.py  1765579309_59733aa5d4c2.py  1765642892_d358779480a3.py  1765806996_e5c9c4723eb6.py  1765837786_56b821d1d285.py  1765839465_6e8907acad12.py
app/: dependencies.py  main.py  models.py  version.py
app/models/: __init__.py  library.py  library_path.py  media_file.py  movie.py  playback.py  recommendation_row.py  settings.py  transcoding.py  user.py
app/routers/v1/: __init__.py  auth.py  dashboard.py  jobs.py  media.py  streaming.py  transcoding.py  users.py
app/services/: auth.py  jobs.py  recommendation_row.py  scanner.py  setup.py  stream_builder.py  transcoding.py
docker/: Dockerfile  docker-entrypoint.sh  unraid-template.xml
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: auth.fixture.ts
e2e/pages/: HomePage.ts  LoginPage.ts  PlayerPage.ts
e2e/specs/auth/: login.spec.ts  setup.spec.ts
e2e/specs/i18n/: language-switching.spec.ts
e2e/specs/media/: browse-libraries.spec.ts
server/: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
server/alembic/versions/: 1765659583_cef18c8c350f.py  1765837786_56b821d1d285.py  1765839465_6e8907acad12.py  1766701877_8cf3d900d225.py
server/app/: database.py  dependencies.py  main.py
server/app/models/: __init__.py  library.py  media_file.py  playback.py  recommendation_row.py  refresh_token.py  settings.py  transcoding.py  user.py
server/app/routers/v1/: __init__.py  auth.py  dashboard.py  media.py  streaming.py  users.py
server/app/services/: auth.py  jobs.py  recommendation_row.py  scanner.py  settings.py  setup.py  stream_builder.py  transcoder.py
server/scripts/: export_openapi.py
server/tests/: __init__.py  conftest.py
server/tests/api/: __init__.py  test_auth_endpoints.py  test_dashboard_endpoints.py  test_media_endpoints.py  test_setup_endpoints.py
server/tests/integration/: __init__.py
server/tests/unit/: test_auth_service.py  test_jobs_service.py  test_stream_builder.py
web/: .pre-commit-config.yaml  AGENTS.md  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.ts
web/e2e/: global-setup.ts  global-teardown.ts
web/e2e/fixtures/: auth.fixture.ts
web/e2e/pages/: DashboardPage.ts  HomePage.ts  PlayerPage.ts
web/src/: App.vue  global.d.ts  main.ts  style.css
web/src/api/: client.ts  openapi.json  types.ts
web/src/components/: CustomVideoPlayer.vue  DirectoryBrowser.vue  JobsPanel.vue  LibrariesMenu.vue  LibraryForm.vue  LibraryItem.vue  LibraryList.vue  MediaCard.vue  MediaRow.vue  MenuBar.vue  PlayerInfoPanel.vue  RecommendationRowForm.vue  RecommendationRowItem.vue  RecommendationRowList.vue  (+2 more)
web/tests/: setup.ts
(+27 files in other folders)
