[project]
name = "ferelix-server"
version = "0.1.0"
description = "A FastAPI application for managing media content"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.10.4",
    "aiofiles>=24.1.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
  "ruff"
]

[tool.ruff]
target-version = "py314"
unsafe-fixes = true
preview = true
lint.extend-select = ["I", "C", "SIM", "TCH", "UP", "RUF"]
lint.mccabe.max-complexity = 15
lint.ignore = ["TC001", "TC002", "TC003"]

[tool.alembic]
file_template = "%%(epoch)s_%%(rev)s"
prepend_sys_path = "."
script_location = "alembic"
version_path_separator = "os"

[[tool.alembic.post_write_hooks]]
entrypoint = "ruff_format"
executable = "ruff"
name = "ruff_format"
options = "format REVISION_SCRIPT_FILENAME"
type = "exec"

[[tool.alembic.post_write_hooks]]
entrypoint = "ruff_check"
executable = "ruff"
name = "ruff_check"
options = "check --fix REVISION_SCRIPT_FILENAME"
type = "exec"
