[project]
name = "ferelix-server"
version = "0.1.0"
description = "A FastAPI application for managing media content"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy",
    "aiosqlite",
    "asyncpg",
    "pydantic",
    "apscheduler",
    "aiofiles",
    "alembic",
    "python-jose[cryptography]",
    "python-multipart>=0.0.20",
    "sqlalchemy-utils",
    "passlib",
]

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.alembic]
file_template = "%%(epoch)s_%%(rev)s"
prepend_sys_path = "."
script_location = "alembic"
version_path_separator = "os"

[tool.pyright]
typeCheckingMode = "standard"
reportDeprecated = "warning"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py314"
unsafe-fixes = true
preview = true
line-length = 120
lint.extend-select = ["I", "C", "SIM", "TCH", "UP", "RUF"]
lint.mccabe.max-complexity = 15
lint.ignore = ["TC001", "TC002", "TC003"]

[[tool.alembic.post_write_hooks]]
entrypoint = "ruff_format"
executable = "ruff"
name = "ruff_format"
options = "format REVISION_SCRIPT_FILENAME"
type = "exec"

[[tool.alembic.post_write_hooks]]
entrypoint = "ruff_check"
executable = "ruff"
name = "ruff_check"
options = "check --fix REVISION_SCRIPT_FILENAME"
type = "exec"
